--- a/app/src/main/res/layout/activity_ordinary_card.xml
+++ b/app/src/main/res/layout/activity_ordinary_card.xml
@@ -22,37 +22,68 @@
             android:id="@+id/open_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
+            android:layout_marginTop="24dp"
             android:text="@{ordinaryCardViewModel.translateWordOpen}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toTopOf="parent"
-            tools:text="open word"/>
+            tools:text="open word" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="320dp"
+            android:layout_marginTop="32dp"
             android:text="@{ordinaryCardViewModel.translateWordClose}"
-            android:visibility="@{ordinaryCardViewModel.translateWordCloseVisibility ? View.VISIBLE : View.GONE}"
+            android:visibility="@{ordinaryCardViewModel.translateWordCloseVisibility ? View.VISIBLE : View.INVISIBLE}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toTopOf="parent"
-            tools:text="close word"/>
+            binding:layout_constraintTop_toBottomOf="@+id/open_word"
+            tools:text="close word" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:text="Translate"
             android:onClick="@{()->ordinaryCardViewModel.openWord()}"
+            android:text="open word"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/open_word" />
+            binding:layout_constraintTop_toBottomOf="@+id/button2" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:onClick="@{()->ordinaryCardViewModel.getAllWords()}"
+            android:text="all words"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->ordinaryCardViewModel.getTranslate()}"
+            android:text="translate"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintHorizontal_bias="0.84"
+            binding:layout_constraintStart_toEndOf="@+id/button2"
+            binding:layout_constraintTop_toTopOf="@+id/button2" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->ordinaryCardViewModel.next()}"
+            android:text="next"
+            binding:layout_constraintEnd_toStartOf="@+id/button2"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="@+id/button2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
