--- a/app/src/main/res/layout/activity_words_writing.xml
+++ b/app/src/main/res/layout/activity_words_writing.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="ordinaryCardViewModel"
-            type="com.szczecin.englishtamagotchi.viewmodel.OrdinaryCardViewModel" />
+            name="wordsWritingViewModel"
+            type="com.szczecin.englishtamagotchi.viewmodel.WordsWritingViewModel" />
 
         <import type="android.view.View" />
 
@@ -18,16 +18,30 @@
         android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/open_word"
+        <EditText
+            android:id="@+id/writing_words"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="@{ordinaryCardViewModel.translateWordOpen}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toTopOf="parent"
+            tools:text="open word"
+            android:afterTextChanged="@{(edtitable)->wordsWritingViewModel.afterUserNameChange(edtitable)}"
+            android:inputType="text"
+            android:autofillHints="test" />
+
+        <TextView
+            android:id="@+id/open_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@{wordsWritingViewModel.translateWordOpen}"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintHorizontal_bias="0.498"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toBottomOf="@+id/writing_words"
             tools:text="open word" />
 
         <TextView
@@ -35,8 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="@{ordinaryCardViewModel.translateWordClose}"
-            android:visibility="@{ordinaryCardViewModel.translateWordCloseVisibility ? View.VISIBLE : View.INVISIBLE}"
+            android:text="@{wordsWritingViewModel.translateWordClose}"
+            android:visibility="@{wordsWritingViewModel.translateWordCloseVisibility ? View.VISIBLE : View.INVISIBLE}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
@@ -48,8 +62,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:onClick="@{()->ordinaryCardViewModel.openWord()}"
-            android:text="open word"
+            android:onClick="@{()->wordsWritingViewModel.check()}"
+            android:text="check"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -81,13 +95,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:onClick="@{()->ordinaryCardViewModel.next()}"
+            android:onClick="@{()->wordsWritingViewModel.next()}"
             android:text="next"
             binding:layout_constraintEnd_toEndOf="@+id/button"
             binding:layout_constraintStart_toStartOf="@+id/button"
             binding:layout_constraintTop_toBottomOf="@+id/button" />
 
-<!--        <Button-->
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Не правильно"
+            android:visibility="@{wordsWritingViewModel.translateWordInCorrectVisibility ? View.VISIBLE : View.INVISIBLE}"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toBottomOf="@+id/button4" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Правильно"
+            android:visibility="@{wordsWritingViewModel.translateWordCorrectVisibility ? View.VISIBLE : View.INVISIBLE}"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+
+        <!--        <Button-->
 <!--            android:id="@+id/button3"-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
