--- a/app/src/main/res/layout/activity_ordinary_choice_card.xml
+++ b/app/src/main/res/layout/activity_ordinary_choice_card.xml
@@ -107,6 +107,15 @@
             binding:layout_constraintStart_toEndOf="@+id/button2"
             binding:layout_constraintTop_toBottomOf="@+id/button4" />
 
+        <Button
+            android:id="@+id/button_listen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->ordinaryCardViewModel.listen()}"
+            android:text="Послушать"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintTop_toBottomOf="@+id/open_word" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
