--- a/app/src/main/res/layout/activity_bind_words.xml
+++ b/app/src/main/res/layout/activity_bind_words.xml
@@ -10,152 +10,46 @@
             type="com.szczecin.englishtamagotchi.viewmodel.WordsBindViewModel" />
 
         <import type="android.view.View" />
-        <import type="androidx.databinding.adapters.Converters"/>
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/buttonWordEngFirst"
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_pair_eng"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonEngClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordEngFirstColor}"
-            android:text="@{wordsBindViewModel.wordEngFirst}"
+            binding:layout_constraintBottom_toBottomOf="parent"
+            binding:layout_constraintEnd_toStartOf="@+id/recycler_pair_rus"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toTopOf="parent"
-            tools:text="welcome" />
+            binding:pairEngList="@{wordsBindViewModel.pairRusEngList}"
+            tools:listitem="@layout/bind_word_item" />
 
-        <Button
-            android:id="@+id/buttonWordRusFirst"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonRusClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordRusFirstColor}"
-            android:text="@{wordsBindViewModel.wordRusFirst}"
-            binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/view"
-            tools:text="добро пожаловать" />
+<!--        <View-->
+<!--            android:id="@+id/view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="1dp"-->
+<!--            android:layout_gravity="bottom"-->
+<!--            android:layout_marginTop="32dp"-->
+<!--            android:background="@color/divider"-->
+<!--            binding:layout_constraintTop_toBottomOf="@+id/recycler_pair_eng" />-->
 
-        <Button
-            android:id="@+id/buttonWordRusSecond"
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_pair_rus"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonRusClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordRusSecondColor}"
-            android:text="@{wordsBindViewModel.wordRusSecond}"
-            binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/buttonWordRusFirst"
-            tools:text="добро пожа" />
-
-        <Button
-            android:id="@+id/buttonWordRusThird"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonRusClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordRusThirdColor}"
-            android:text="@{wordsBindViewModel.wordRusThird}"
-            binding:layout_constraintEnd_toStartOf="@+id/buttonWordRusFifth"
-            binding:layout_constraintStart_toEndOf="@+id/buttonWordRusFirst"
-            binding:layout_constraintTop_toBottomOf="@+id/buttonWordRusFirst"
-            tools:text="добро пожа" />
-
-        <Button
-            android:id="@+id/buttonWordRusFourth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonRusClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordRusFourthColor}"
-            android:text="@{wordsBindViewModel.wordRusFourth}"
-            binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toEndOf="@+id/buttonWordRusThird"
-            binding:layout_constraintTop_toBottomOf="@+id/buttonWordRusFifth"
-            tools:text="добро пожа" />
-
-        <Button
-            android:id="@+id/buttonWordRusFifth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="23dp"
             android:layout_marginEnd="8dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonRusClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordRusFifthColor}"
-            android:text="@{wordsBindViewModel.wordRusFifth}"
+            android:foregroundGravity="bottom|center|center_horizontal"
             binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/view"
-            tools:text="добро пожаловать" />
-
-        <Button
-            android:id="@+id/buttonWordEngSecond"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="8dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonEngClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordEngSecondColor}"
-            android:text="@{wordsBindViewModel.wordEngSecond}"
-            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toEndOf="@+id/recycler_pair_eng"
             binding:layout_constraintTop_toTopOf="parent"
-            tools:text="welcome" />
-
-        <Button
-            android:id="@+id/buttonWordEngThird"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonEngClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordEngThirdColor}"
-            android:text="@{wordsBindViewModel.wordEngThird}"
-            binding:layout_constraintEnd_toStartOf="@+id/buttonWordEngSecond"
-            binding:layout_constraintStart_toEndOf="@+id/buttonWordEngFirst"
-            binding:layout_constraintTop_toTopOf="parent"
-            tools:text="welcome" />
-
-        <Button
-            android:id="@+id/buttonWordEngFourth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonEngClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordEngFourthColor}"
-            android:text="@{wordsBindViewModel.wordEngFourth}"
-            binding:layout_constraintEnd_toStartOf="@+id/buttonWordEngThird"
-            binding:layout_constraintStart_toStartOf="@+id/buttonWordEngFirst"
-            binding:layout_constraintTop_toBottomOf="@+id/buttonWordEngFirst"
-            tools:text="welcome" />
-
-        <Button
-            android:id="@+id/buttonwWordEngFifth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{(view)->wordsBindViewModel.buttonEngClick(view)}"
-            binding:backgroundButtonColor = "@{wordsBindViewModel.wordEngFifthColor}"
-            android:text="@{wordsBindViewModel.wordEngFifth}"
-            binding:layout_constraintEnd_toEndOf="@+id/buttonWordEngSecond"
-            binding:layout_constraintStart_toEndOf="@+id/buttonWordEngThird"
-            binding:layout_constraintTop_toBottomOf="@+id/buttonWordEngSecond"
-            tools:text="welcome" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="32dp"
-            android:background="@color/divider"
-            binding:layout_constraintTop_toBottomOf="@+id/buttonwWordEngFifth" />
+            binding:pairRusList="@{wordsBindViewModel.pairRusEngList}"
+            tools:listitem="@layout/bind_word_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
