change logic added first step

--- a/app/src/main/res/layout/activity_bind_words.xml
+++ b/app/src/main/res/layout/activity_bind_words.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="wordsBindViewModel"
-            type="com.szczecin.englishtamagotchi.viewmodel.WordsBindViewModel" />
+            type="com.szczecin.englishtamagotchi.viewmodel.learning.WordsBindViewModel" />
 
         <import type="android.view.View" />
 
