--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="green">#43A047</color>
     <color name="choice">#FDD835</color>
     <color name="grey">#BBB9B5</color>
+    <color name="white">#FFFFFF</color>
 </resources>
