--- a/app/src/main/res/layout/activity_ordinary_card.xml
+++ b/app/src/main/res/layout/activity_ordinary_card.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="ordinaryCardViewModel"
-            type="com.szczecin.englishtamagotchi.viewmodel.OrdinaryCardViewModel" />
+            type="com.szczecin.englishtamagotchi.viewmodel.learning.OrdinaryCardViewModel" />
 
         <import type="android.view.View" />
 
