--- a/app/src/main/res/layout/common_list_group_item.xml
+++ b/app/src/main/res/layout/common_list_group_item.xml
@@ -17,19 +17,20 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/buttonEng"
-            android:layout_width="175dp"
+            android:id="@+id/buttonGroup"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@{text}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="добро пожаловать" />
+            tools:text="0-100" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
