--- a/app/src/main/res/layout/common_list_item.xml
+++ b/app/src/main/res/layout/common_list_item.xml
@@ -6,7 +6,11 @@
     <data>
 
         <variable
-            name="text"
+            name="textEng"
+            type="String" />
+
+        <variable
+            name="textRus"
             type="String" />
 
         <variable
@@ -25,15 +29,25 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="@{text}"
+            android:text="@{textEng}"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="new word" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@{textRus}"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="new word" />
 
