--- a/app/src/main/res/layout/activity_choose_correct_word.xml
+++ b/app/src/main/res/layout/activity_choose_correct_word.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://schemas.android.com/apk/res-auto">
+    xmlns:binding="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,12 +18,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <View
+            android:id="@+id/view2"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="#dcedc8"
+            binding:layout_constraintBottom_toTopOf="@+id/gradientGuideline1"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent" />
 
-        <Button
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gradientGuideline1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
+
+
+        <TextView
             android:id="@+id/btn_word_open"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:textSize="30sp"
+            android:textColor="@android:color/background_dark"
             android:text="@{chooseCorrectWordsViewModel.openedWord}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
@@ -33,11 +52,11 @@
             android:id="@+id/recycler_repeat_words"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            binding:chooseCorrectList="@{chooseCorrectWordsViewModel.pairRusEngList}"
             binding:layout_constraintBottom_toBottomOf="parent"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/btn_word_open"
-            binding:chooseCorrectList="@{chooseCorrectWordsViewModel.pairRusEngList}"
+            binding:layout_constraintTop_toBottomOf="@+id/view2"
             tools:listitem="@layout/repeat_word_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
