--- a/app/src/main/res/layout/activity_ordinary_card.xml
+++ b/app/src/main/res/layout/activity_ordinary_card.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://schemas.android.com/apk/res-auto">
+    xmlns:binding="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,13 +18,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gradientGuideline1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.3" />
 
         <TextView
             android:id="@+id/open_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp"
             android:text="@{ordinaryCardViewModel.translateWordOpen}"
+            android:textColor="@android:color/background_dark"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="@id/gradientGuideline1"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
@@ -31,96 +42,80 @@
             tools:text="open word" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/close_word"
+            android:textColor="@android:color/background_dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="20dp"
+            android:textSize="30sp"
             android:text="@{ordinaryCardViewModel.translateWordClose}"
             android:visibility="@{ordinaryCardViewModel.translateWordCloseVisibility ? View.VISIBLE : View.INVISIBLE}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/open_word"
+            binding:layout_constraintTop_toBottomOf="@+id/imageView"
             tools:text="close word" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_open_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/audio_selector"
             android:onClick="@{()->ordinaryCardViewModel.openWord()}"
-            android:text="open word"
+            android:text="@string/check"
+            binding:layout_constraintBottom_toBottomOf="parent"
             binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-<!--        <Button-->
-<!--            android:id="@+id/button2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="60dp"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.getAllWords()}"-->
-<!--            android:text="all words"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintStart_toStartOf="parent"-->
-<!--            binding:layout_constraintTop_toBottomOf="@+id/textView3" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/button3"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.getTranslate()}"-->
-<!--            android:text="translate"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintHorizontal_bias="0.84"-->
-<!--            binding:layout_constraintStart_toEndOf="@+id/button2"-->
-<!--            binding:layout_constraintTop_toTopOf="@+id/button2" />-->
+            binding:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:background="@drawable/audio_selector"
             android:onClick="@{()->ordinaryCardViewModel.next()}"
-            android:text="next"
-            binding:layout_constraintEnd_toEndOf="@+id/button"
-            binding:layout_constraintStart_toStartOf="@+id/button"
-            binding:layout_constraintTop_toBottomOf="@+id/button" />
-
-<!--        <Button-->
-<!--            android:id="@+id/button3"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="32dp"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.next()}"-->
-<!--            android:text="Finish"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintStart_toStartOf="parent"-->
-<!--            binding:layout_constraintTop_toBottomOf="@+id/button4" />-->
+            android:text="@string/next"
+            binding:layout_constraintBottom_toBottomOf="@+id/btn_open_word"
+            binding:layout_constraintStart_toEndOf="@+id/btn_open_word"
+            binding:layout_constraintTop_toTopOf="@+id/btn_open_word" />
 
         <Button
             android:id="@+id/btn_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/audio_selector"
             android:onClick="@{()->ordinaryCardViewModel.removeWord()}"
+            android:text="@string/i_know"
             android:visibility="@{ordinaryCardViewModel.isRusHideVisibility ? View.VISIBLE : View.INVISIBLE}"
-            android:text="Я знаю"
-            binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/button4" />
+            binding:layout_constraintBottom_toBottomOf="@+id/btn_open_word"
+            binding:layout_constraintEnd_toStartOf="@+id/btn_open_word"
+            binding:layout_constraintTop_toTopOf="@+id/btn_open_word" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_listen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/audio_selector"
             android:onClick="@{()->ordinaryCardViewModel.listenWord()}"
+            android:src="@drawable/ic_play_arrow_white_18dp"
             android:visibility="@{ordinaryCardViewModel.isRusHideVisibility ? View.VISIBLE : View.INVISIBLE}"
-            android:text="Слушать"
-            binding:layout_constraintBottom_toBottomOf="@+id/button"
+            binding:layout_constraintBottom_toTopOf="@+id/close_word"
             binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toEndOf="@+id/button"
-            binding:layout_constraintTop_toTopOf="@+id/button" />
+            binding:layout_constraintTop_toBottomOf="@+id/open_word" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="16dp"
+            binding:imgUrl='@{ordinaryCardViewModel.completeImageUrl}'
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toBottomOf="@+id/open_word"
+            tools:srcCompat="@tools:sample/avatars" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
