--- a/app/src/main/res/layout/activity_repeating.xml
+++ b/app/src/main/res/layout/activity_repeating.xml
@@ -66,13 +66,13 @@
 <!--            binding:layout_constraintTop_toTopOf="@+id/button2" />-->
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btn_next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:onClick="@{()->repeatViewModel.repeatWordIn5days()}"
             android:text="Know well"
             binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toEndOf="@+id/textView3"
+            binding:layout_constraintStart_toEndOf="@+id/close_word"
             binding:layout_constraintTop_toTopOf="@+id/button2" />
 
         <Button
@@ -82,7 +82,7 @@
             android:layout_marginTop="32dp"
             android:onClick="@{()->repeatViewModel.moveWordFromRepeatingToLearn()}"
             android:text="Don't remember"
-            binding:layout_constraintEnd_toStartOf="@+id/textView3"
+            binding:layout_constraintEnd_toStartOf="@+id/close_word"
             binding:layout_constraintStart_toStartOf="parent"
             binding:layout_constraintTop_toBottomOf="@+id/btn_translate" />
 
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:onClick="@{()->repeatViewModel.repeatWordIn3days()}"
             android:text="Know good"
-            binding:layout_constraintEnd_toStartOf="@+id/button4"
+            binding:layout_constraintEnd_toStartOf="@+id/btn_next"
             binding:layout_constraintStart_toEndOf="@+id/button2"
             binding:layout_constraintTop_toTopOf="@+id/button2" />
 
@@ -113,7 +113,7 @@
             android:text="Button"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/textView3" />
+            binding:layout_constraintTop_toBottomOf="@+id/close_word" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
