--- a/app/src/main/res/layout/activity_words_writing.xml
+++ b/app/src/main/res/layout/activity_words_writing.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://schemas.android.com/apk/res-auto">
+    xmlns:binding="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,155 +18,152 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <View
+            android:id="@+id/view2"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="#dcedc8"
+            binding:layout_constraintBottom_toTopOf="@+id/gradientGuideline2"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="@+id/gradientGuideline1" />
 
-        <TextView
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gradientGuideline2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.25" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gradientGuideline3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.8" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gradientGuideline1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
+
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/writing_words"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:inputType="textCapCharacters"
+            android:textAllCaps="true"
+            binding:changeColor="@{wordsWritingViewModel.writingText}"
+            binding:layout_constraintBottom_toBottomOf="@+id/view2"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toTopOf="parent"
-            android:textAllCaps="true"
-            tools:text="test"
-            binding:changeColor="@{wordsWritingViewModel.writingText}"/>
+            binding:layout_constraintTop_toTopOf="@+id/view2"
+            tools:text="test" />
 
         <TextView
             android:id="@+id/open_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:textSize="30sp"
+            android:textColor="@android:color/background_dark"
             android:text="@{wordsWritingViewModel.translateWordOpen}"
+            binding:layout_constraintBottom_toTopOf="@+id/view2"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/writing_words"
             tools:text="open word" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/close_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="@{wordsWritingViewModel.translateWordClose}"
+            android:textColor="@android:color/background_dark"
+            android:textSize="25sp"
             android:visibility="@{wordsWritingViewModel.translateWordCloseVisibility ? View.VISIBLE : View.INVISIBLE}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintHorizontal_bias="0.498"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/open_word"
+            binding:layout_constraintTop_toBottomOf="@+id/view2"
             tools:text="close word" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{()->wordsWritingViewModel.check()}"
-            android:text="check"
-            binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-<!--        <Button-->
-<!--            android:id="@+id/button2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="60dp"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.getAllWords()}"-->
-<!--            android:text="all words"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintStart_toStartOf="parent"-->
-<!--            binding:layout_constraintTop_toBottomOf="@+id/textView3" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/button3"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.getTranslate()}"-->
-<!--            android:text="translate"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintHorizontal_bias="0.84"-->
-<!--            binding:layout_constraintStart_toEndOf="@+id/button2"-->
-<!--            binding:layout_constraintTop_toTopOf="@+id/button2" />-->
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:onClick="@{()->wordsWritingViewModel.next()}"
-            android:text="next"
-            binding:layout_constraintEnd_toEndOf="@+id/button"
-            binding:layout_constraintStart_toStartOf="@+id/button"
-            binding:layout_constraintTop_toBottomOf="@+id/button" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:text="Не правильно"
             android:textColor="@android:color/holo_red_dark"
             android:visibility="@{wordsWritingViewModel.translateWordInCorrectVisibility ? View.VISIBLE : View.INVISIBLE}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/button4" />
+            binding:layout_constraintTop_toBottomOf="@+id/close_word" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/holo_green_dark"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:text="Правильно"
+            android:textColor="@android:color/holo_green_dark"
             android:visibility="@{wordsWritingViewModel.translateWordCorrectVisibility ? View.VISIBLE : View.INVISIBLE}"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/textView2" />
+            binding:layout_constraintTop_toBottomOf="@+id/close_word" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_words_writing"
             android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            binding:layout_constraintBottom_toTopOf="@+id/gradientGuideline3"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:wordsWriting="@{wordsWritingViewModel.letters}"
+            tools:listitem="@layout/writing_letter" />
+
+        <Button
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/audio_selector"
+            android:onClick="@{()->wordsWritingViewModel.check()}"
+            android:text="@string/check"
             binding:layout_constraintBottom_toBottomOf="parent"
             binding:layout_constraintEnd_toEndOf="parent"
             binding:layout_constraintStart_toStartOf="parent"
-            binding:layout_constraintTop_toBottomOf="@+id/textView"
-            binding:wordsWriting="@{wordsWritingViewModel.letters}"
-            tools:listitem="@layout/writing_letter" />
+            binding:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <Button
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/audio_selector"
+            android:onClick="@{()->wordsWritingViewModel.next()}"
+            android:text="@string/next"
+            binding:layout_constraintBottom_toBottomOf="@+id/check"
+            binding:layout_constraintEnd_toEndOf="parent"
+            binding:layout_constraintStart_toEndOf="@+id/check"
+            binding:layout_constraintTop_toTopOf="@+id/check" />
 
         <Button
             android:id="@+id/remove_last_letter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;"
+            android:background="@drawable/audio_selector"
             android:onClick="@{()->wordsWritingViewModel.removeLastLetter()}"
-            binding:layout_constraintEnd_toEndOf="parent"
-            binding:layout_constraintStart_toEndOf="@+id/button"
-            binding:layout_constraintTop_toTopOf="@+id/button" />
-
-        <!--        <Button-->
-<!--            android:id="@+id/button3"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="32dp"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.next()}"-->
-<!--            android:text="Finish"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintStart_toStartOf="parent"-->
-<!--            binding:layout_constraintTop_toBottomOf="@+id/button4" />-->
-
-        <!--        <Button-->
-<!--            android:id="@+id/button2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="32dp"-->
-<!--            android:onClick="@{()->ordinaryCardViewModel.removeWord()}"-->
-<!--            android:text="Remove Block"-->
-<!--            binding:layout_constraintEnd_toEndOf="parent"-->
-<!--            binding:layout_constraintStart_toStartOf="parent"-->
-<!--            binding:layout_constraintTop_toBottomOf="@+id/button4" />-->
+            android:text="&lt;"
+            binding:layout_constraintBottom_toBottomOf="@+id/check"
+            binding:layout_constraintEnd_toStartOf="@+id/check"
+            binding:layout_constraintStart_toStartOf="parent"
+            binding:layout_constraintTop_toTopOf="@+id/check" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
