--- a/app/src/main/res/layout/repeat_word_item.xml
+++ b/app/src/main/res/layout/repeat_word_item.xml
@@ -22,6 +22,7 @@
 
         <Button
             android:id="@+id/buttonEngRepeat"
+            android:background="@drawable/audio_selector"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
